--- a/requirements.txt
+++ b/requirements.txt
@@ -1,71 +1,68 @@
-attrs==25.1.0; python_version >= '3.8'
-beautifulsoup4==4.13.3; python_full_version >= '3.7.0'
-behave==1.2.6; python_version >= '2.6' and python_version not in '3.0, 3.1, 3.2'
-certifi==2025.1.31; python_version >= '3.6'
-chardet==5.2.0; python_version >= '3.7'
-charset-normalizer==3.4.1; python_version >= '3.7'
-colorama==0.4.6; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6'
-cssselect==1.2.0; python_version >= '3.7'
-exceptiongroup==1.2.2; python_version >= '3.7'
-execnet==2.1.1; python_version >= '3.8'
-fasteners==0.19; python_version >= '3.6'
-filelock==3.17.0; python_version >= '3.9'
-h11==0.14.0; python_version >= '3.7'
-idna==3.10; python_version >= '3.6'
-iniconfig==2.0.0; python_version >= '3.7'
-jinja2==3.1.5; python_version >= '3.7'
-markdown-it-py==3.0.0; python_version >= '3.8'
-markupsafe==3.0.2; python_version >= '3.9'
-mdurl==0.1.2; python_version >= '3.7'
-mouseinfo==0.1.3
-mycdp==1.1.0; python_version >= '3.8'
-outcome==1.3.0.post0; python_version >= '3.7'
-packaging==24.2; python_version >= '3.8'
-parameterized==0.9.0; python_version >= '3.7'
+attrs==25.1.0
+beautifulsoup4==4.13.3
+behave==1.2.6
+certifi==2025.1.31
+chardet==5.2.0
+charset-normalizer==3.4.1
+colorama==0.4.6
+cssselect==1.2.0
+exceptiongroup==1.2.2
+execnet==2.1.1
+fasteners==0.19
+filelock==3.17.0
+h11==0.14.0
+idna==3.10
+iniconfig==2.0.0
+Jinja2==3.1.5
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+MouseInfo==0.1.3
+mycdp==1.1.0
+outcome==1.3.0.post0
+packaging==24.2
+parameterized==0.9.0
 parse==1.20.2
-parse-type==0.6.4; python_version >= '2.7' and python_version not in '3.0, 3.1'
-pdbp==1.6.1; python_version >= '3.8'
-pillow==11.1.0; python_version >= '3.9'
-pip==25.0.1; python_version >= '3.8'
-platformdirs==4.3.6; python_version >= '3.8'
-pluggy==1.5.0; python_version >= '3.8'
-pyautogui==0.9.54
-pygetwindow==0.0.9
-pygments==2.19.1; python_version >= '3.8'
-pymsgbox==1.0.9
-pynose==1.5.3; python_version >= '3.7'
-pyotp==2.9.0; python_version >= '3.7'
+parse_type==0.6.4
+pdbp==1.6.1
+pillow==11.1.0
+platformdirs==4.3.6
+pluggy==1.5.0
+PyAutoGUI==0.9.54
+PyGetWindow==0.0.9
+Pygments==2.19.1
+PyMsgBox==1.0.9
+pynose==1.5.4
+pyotp==2.9.0
 pyperclip==1.9.0
-pyrect==0.2.0
-pyscreeze==1.0.1
-pysocks==1.7.1; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2, 3.3'
-pytest==8.3.4; python_version >= '3.8'
-pytest-html==4.0.2; python_version >= '3.8'
-pytest-metadata==3.1.1; python_version >= '3.8'
+PyRect==0.2.0
+PyScreeze==1.0.1
+PySocks==1.7.1
+pytest==8.3.4
+pytest-html==4.0.2
+pytest-metadata==3.1.1
 pytest-ordering==0.6
-pytest-rerunfailures==15.0; python_version >= '3.9'
-pytest-xdist==3.6.1; python_version >= '3.8'
-python-xlib==0.33; platform_system == 'Linux'
+pytest-rerunfailures==15.0
+pytest-xdist==3.6.1
+python-xlib==0.33
 python3-xlib==0.15
 pytweening==1.2.0
-pyyaml==6.0.2; python_version >= '3.8'
-requests==2.32.3; python_version >= '3.8'
-rich==13.9.4; python_full_version >= '3.8.0'
-sbvirtualdisplay==1.4.0; python_version >= '3.8'
-selenium==4.28.1; python_version >= '3.9'
-seleniumbase==4.34.12; python_version >= '3.8'
-setuptools==75.8.0; python_version >= '3.9'
-six==1.17.0; python_version >= '2.7' and python_version not in '3.0, 3.1, 3.2'
-sniffio==1.3.1; python_version >= '3.7'
+PyYAML==6.0.2
+requests==2.32.3
+rich==13.9.4
+sbvirtualdisplay==1.4.0
+selenium==4.29.0
+seleniumbase==4.35.0
+six==1.17.0
+sniffio==1.3.1
 sortedcontainers==2.4.0
-soupsieve==2.6; python_version >= '3.8'
-tabcompleter==1.4.0; python_version >= '3.8'
-tomli==2.2.1; python_version >= '3.8'
-trio==0.28.0; python_version >= '3.9'
-trio-websocket==0.11.1; python_version >= '3.7'
-typing-extensions==4.12.2; python_version >= '3.8'
-urllib3[socks]==2.3.0; python_version >= '3.9'
-websocket-client==1.8.0; python_version >= '3.8'
-websockets==14.2; python_version >= '3.9'
-wheel==0.45.1; python_version >= '3.8'
-wsproto==1.2.0; python_full_version >= '3.7.0'
+soupsieve==2.6
+tabcompleter==1.4.0
+tomli==2.2.1
+trio==0.29.0
+trio-websocket==0.12.1
+typing_extensions==4.12.2
+urllib3==2.3.0
+websocket-client==1.8.0
+websockets==15.0
+wsproto==1.2.0
